fixed navbar size and spacing across all media queries. Centered footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ html    {
 
 body  {
     background-image: url('../images/interlaced.png');
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-position: center;
     background-size: cover;
     background-color: lightgrey;
@@ -57,7 +57,6 @@ body  {
 header {
     background-color: #ffffff;
     border-bottom: 2px solid #cccccc;
-    max-height: 72px;
     height: 72px;
     overflow: hidden;
     width: 100%;
@@ -125,6 +124,7 @@ footer {
     bottom: 2px;
     margin: 0 auto;
     width: 100px;
+    text-align: center;
 }
 
 a {
@@ -212,17 +212,22 @@ input   {
 @media screen and (max-width: 600px) {
 
     h1 {
-        width: 100%;
         height: 100%;
         text-align: center;
         margin-top: 0;
         float: left;
+        width: 80%;
+        font-size: 24px;
     }
 
     ul {
         width: 100%;
-        float: left;
+        text-align: right;
         box-sizing: border-box;
+    }
+
+    .nav    {
+        width: 100%;
     }
 
 
@@ -239,7 +244,7 @@ input   {
     }
 
     footer {
-        width: 100%;
+       width: 100%;
     }
 }
 
@@ -249,16 +254,14 @@ input   {
         width: 100%;
         height: 100%;
         text-align: center;
-        margin-top: 0;
         float: left;
+        margin-left: 5%;
     }
 
     ul {
         width: 100%;
-        float: left;
-        box-sizing: border-box;
+        text-align: right;
     }
-
 
     .about, .contact-form, .portfolioList {
         width: 90%;
@@ -273,6 +276,9 @@ input   {
     }
 
     footer {
+        width: 100%;
+    }
+    .nav {
         width: 100%;
     }
 
@@ -301,4 +307,7 @@ input   {
         width: 100%;
     }
 
+    .nav {
+        width: 100%;
+    }
 }
